--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,14 @@ version = "0.1.0"
 authors = ["Philippe Loctaux <p@philippeloctaux.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-clap = "2.33.0"
-rand = "0.7.2"
+structopt = "0.3.17"
+rand = "0.7.3"
 
 [[bin]]
-name = "bsq"
-path = "src/main.rs"
+name = "generator"
+path = "src/generator.rs"
+
+[[bin]]
+name = "solver"
+path = "src/solver.rs"
